# nanoGPTJAX

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: fineweb_dataloader.py
gpt/: utils.py
nanogpt/: checkpoint_utils.py  chunked_ce_loss.py  config.py  download_fineweb_tokens.py  fineweb_dataloader.py  inference.py  inference_with_quntized_model.ipynb  kvcache.py  layers.py  model.py  optim.py  quantization.py  sft_dataloader.py  train.py  train_sft.py  utils.py
nanogpt/dev/: model.py  profile.py  train.py
nanogpt/tasks/: common.py
notes/: design.md  tests.md  training.md
