[project]
name = "nanogptjax"
version = "0.1.0"
description = "Building scalable LLMs in pure JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax==0.8.1",
    "jaxlib==0.8.1",
    "orbax-checkpoint==0.11.28",
    "optax==0.2.6",
    "numpy==2.3.5",
    "tiktoken==0.12.0",
    "huggingface-hub==1.2.3",
    "datasets==4.4.1",
    "ruff>=0.14.10",
    "rich>=14.2.0",
]

[project.optional-dependencies]
jaxgpu = [
    "jax-cuda12-pjrt==0.8.1",
    "jax-cuda12-plugin==0.8.1",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    "*.ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/nanogpt/*" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"